# solveit-tex

./: .gitignore  .solveit_tex.py.swp  CRAFT.ipynb  CRAFT.js  LICENSE  README.md  pyproject.toml  solveit-tex-out.ipynb  solveit-tex.ipynb  solveit-tex_dup1.ipynb  solveit_tex.py
example/: .neurips_2026.tex.swp  README.md  build_neurips.ipynb  neurips_2026-out.ipynb  neurips_2026.ipynb  references.bib
