[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "solveit-tex"
version = "0.1.0"
description = "Convert Solveit dialogs to LaTeX and compile PDFs"
readme = "README.md"
requires-python = ">=3.8"
dependencies = []

[tool.setuptools]
py-modules = ["solveit_tex"]
